fix: incorrect JVM arg in docker file